// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow load custom resources md2html single page with custom resources: .yfm 1`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Allow load custom resources md2html single page with custom resources: filelist 1`] = `
"[
  ".yfm",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "index.html",
  "page.html",
  "project/config.html",
  "single-page-toc.js",
  "single-page.html",
  "single-page.json",
  "toc.js"
]"
`;

exports[`Allow load custom resources md2html single page with custom resources: index.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="state"
    >
      {&quot;data&quot;:{&quot;data&quot;:{&quot;title&quot;:&quot;Documentation&quot;,&quot;description&quot;:&quot;&quot;,&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;links&quot;:[{&quot;title&quot;:&quot;Getting started with Documentation&quot;,&quot;description&quot;:&quot;This guide will show you the basics of working with Documentation&quot;,&quot;href&quot;:&quot;page.html&quot;}]},&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;title&quot;:&quot;Documentation&quot;,&quot;leading&quot;:true},&quot;router&quot;:{&quot;pathname&quot;:&quot;index&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x2F;/g, "/").replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources: page.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="yfm"
          content="builder"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;},{&quot;name&quot;:&quot;yfm&quot;,&quot;content&quot;:&quot;builder&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;&#x2F;p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;page&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x2F;/g, "/").replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources: project/config.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;&#x2F;p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;project&#x2F;config&quot;,&quot;depth&quot;:2},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x2F;/g, "/").replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources: single-page.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="state"
    >
      {&quot;data&quot;:{&quot;leading&quot;:false,&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;&#x2F;p&gt;/n&lt;hr class=/&quot;yfm-page__delimeter/&quot;&gt;&lt;p&gt;Lorem&lt;&#x2F;p&gt;/n&quot;,&quot;headings&quot;:[],&quot;meta&quot;:{&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;]},&quot;title&quot;:&quot;Documentation&quot;},&quot;router&quot;:{&quot;pathname&quot;:&quot;single-page.html&quot;,&quot;depth&quot;:2,&quot;base&quot;:&quot;..&#x2F;&quot;},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x2F;/g, "/").replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="single-page-toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html single page with custom resources: single-page.json 1`] = `"{"data":{"leading":false,"html":"<p>Lorem</p>/n<hr class=\\"yfm-page__delimeter\\"><p>Lorem</p>/n","headings":[],"meta":{"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"title":"Documentation"},"router":{"pathname":"single-page.html","depth":2,"base":"../"},"lang":"ru","langs":["ru"]}"`;

exports[`Allow load custom resources md2html single page with custom resources: single-page-toc.js 1`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"#index","items":[{"name":"Documentation","href":"#page"},{"name":"Config","href":"#project_config"}]};"`;

exports[`Allow load custom resources md2html single page with custom resources: toc.js 1`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Allow load custom resources md2html with custom resources: .yfm 1`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Allow load custom resources md2html with custom resources: filelist 1`] = `
"[
  ".yfm",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "index.html",
  "page.html",
  "project/config.html",
  "toc.js"
]"
`;

exports[`Allow load custom resources md2html with custom resources: index.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="state"
    >
      {&quot;data&quot;:{&quot;data&quot;:{&quot;title&quot;:&quot;Documentation&quot;,&quot;description&quot;:&quot;&quot;,&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;links&quot;:[{&quot;title&quot;:&quot;Getting started with Documentation&quot;,&quot;description&quot;:&quot;This guide will show you the basics of working with Documentation&quot;,&quot;href&quot;:&quot;page.html&quot;}]},&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;title&quot;:&quot;Documentation&quot;,&quot;leading&quot;:true},&quot;router&quot;:{&quot;pathname&quot;:&quot;index&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x2F;/g, "/").replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with custom resources: page.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="yfm"
          content="builder"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;},{&quot;name&quot;:&quot;yfm&quot;,&quot;content&quot;:&quot;builder&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;&#x2F;p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;page&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x2F;/g, "/").replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with custom resources: project/config.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
    <link rel="stylesheet"
          type="text/css"
          href="_assets/style/test.css"
          id="custom-style"
    >
    <script src="_assets/script/test1.js">
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;style&quot;:[&quot;_assets&#x2F;style&#x2F;test.css&quot;],&quot;script&quot;:[&quot;_assets&#x2F;script&#x2F;test1.js&quot;]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;&#x2F;p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;project&#x2F;config&quot;,&quot;depth&quot;:2},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x2F;/g, "/").replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with custom resources: toc.js 1`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Allow load custom resources md2md with custom resources: .yfm 1`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Allow load custom resources md2md with custom resources: filelist 1`] = `
"[
  ".yfm",
  "_assets/script/test1.js",
  "_assets/style/test.css",
  "index.yaml",
  "page.md",
  "project/config.md",
  "toc.yaml"
]"
`;

exports[`Allow load custom resources md2md with custom resources: index.yaml 1`] = `
"title: Documentation
description: ''
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
  title: Documentation
  noIndex: true
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Allow load custom resources md2md with custom resources: page.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: yfm
    content: builder
style:
  - _assets/style/test.css
script:
  - _assets/script/test1.js
---

Lorem
"
`;

exports[`Allow load custom resources md2md with custom resources: project/config.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
style:
  - _assets/style/test.css
script:
  - _assets/script/test1.js
---
Lorem"
`;

exports[`Allow load custom resources md2md with custom resources: toc.yaml 1`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
"
`;
